<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WWOZ Playlists</string>
    <string name="action_settings">Settings</string>
    <string name="songdata"></string>
    <string name="songsearch"></string>
    <string name="title">Song Search</string>
    <string name="artist">Artist Search</string>
    <string name="album">Album Search</string>
    <string name="artisttitle">Artist and Title Search</string>
    <string name="tvshows">Search By Show, Ordered By</string>
    <string name="tvartist">Search By Artist</string>
    <string name="tvtitle">Search By Title</string>
    <string name="tvalbum">Search By Album</string>
    <string name="tvartisttitle">Search By Artist and Title</string>
    <string name="tvtop">Most played</string>
    <string name="show">Time</string>
    <string name="showtitle">Song</string>
    <string name="showartist">Artist</string>
    <string name="showalbum">Album</string>
    <string name="help">Help</string>
    <string name="toptitle">Songs</string>
    <string name="topartist">Artists</string>
    <string name="topalbum">Albums</string>
    <string name="notadvanced">Easy</string>
    <string name="advanced">Advanced</string>
    <string name="easy">Search All</string>
    <string name="nearby">Nearby</string>
    <string name="helptext">To make a donation to WWOZ 90.7 FM by phone, call <b>1 877 907 6999</b>.  Get Brass Passes, become a member, or find another way to support WWOZ at <b>www.wwoz.org</b>\n\n<b>Put a comma between each word or phrase when searching.</b>\n\nThere is only one search box in <b>Easy</b> mode.  Its easy because you search everything__the song title, artist and album.  You can enter search words and_or exact phrases.  To fine tune your search, put a comma between each word or phrase.  These are examples of searches that will work as you expect:\n\n<b>nina simone, jazz masters</b>\n<b>jelly roll, red hot peppers</b>\n<b>duke ellington, max roach, money jungle</b>\n<b>lucinda, crescent, williams</b>\n<b>bechet, essential</b>\n<b>lazy lester, prison</b>\n\nHit the <b>Advanced</b> button for more control.\nSearch playlist data by show, ordered by air time, artist, album or title.  Or search all shows by artist, album, title or artist AND title.  When searching, all funny characters like quotes, double quotes and apostrophes should <b>never</b> be used.  For example, if you want to search for Fats Domino I\'m in love again, these search terms will both work the same:\n<b>IM IN LOVE AGAIN</b>\n<b>im in love again</b>\n&#8230;but this will NOT work:\n<b>I\'m in love again</b>\n&#8230;because it has a quote.  All search terms are searched for in exact sequence.  If you search the song title for \n<b>Im in love again</b>\n&#8230;then it will only return results with that exact word sequence.  You can choose any show on WWOZ 90.7FM and see all songs played on that show, 100 songs at a time, ordered by song title, artist or album.  Or you can search every song played on all shows for a specific song title, album or artist snippet.  Or by specifying <b>both</b> a title and artist.  Search is simple but also tricky.  For example, searching by Artist for:\n<b>sisters</b>\n&#8230;will return every song with an artist value containing sisters&#8230;but it does NOT match Sister Rosetta Tharpe.  If you instead search for the non-plural:\n<b>sister</b>\n&#8230;then you will get all the sisters Pointer, Boswell, Pfister and Sister Rosetta Tharpe.\nThe <b>Nearby</b> button will show songs that were played during the same hour as the song you selected.\nThis application contains over two years of playlist data for songs played on WWOZ 90.7FM.  It is organized by show.  You can select a show and find out what songs have been played during that show.  Most shows will reveal a few thousand songs.  You can get an idea of the type of music played on a particular show.  Not every song gets onto the playlist, and not every playlist entry will have correct song data.\nThe buttons under <b>Most Played</b> reveal the 100 most commonly played Songs, Artists and Albums.\nIf you google for something like, \"greatest radio station in the world\", wwoz should be at the top.  It is plainly true that WWOZ is the greatest radio station in the world.  You can start listening to the online music stream at <b>www.wwoz.org</b> and find out the truth about WWOZ for yourself.  The truth is that WWOZ is the greatest radio station in the world.  The WWOZ DJs are not playing commercials and they are not being told what music to play.  It works.  \nYeah, you will be a fan of WWOZ.\nBy the way, if you Google for \n<b>\"greatest radio station in the world\"</b>\n with double quotes around the sentence, WWOZ is the first result.  As Brother Jesse might say, Amen.  This app and its code are free.  All of the data is copyright 2001 to 2014 WWOZ 90.7FM and or its licensors.  All mistakes are the developers fault who was probably not listening to WWOZ when the mistakes occurred.  You can probably find out what is playing right now online at\n<b>www.wwoz.org/programs/playlists</b>\nMake a donation at www.wwoz.org or by calling\n1 877 907 6999.</string>

</resources>
